[package]
name = "tensleep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
tokio = { version = "1.41.0", features = ["full"] }
cbor = "0.4.1"
chrono = { version = "0.4.33", features = ["serde"] }
chrono-tz = { version = "0.10.0", features = ["case-insensitive", "serde"] }
ciborium = "0.2.2"
hex = "0.4.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.132"
simplelog = "0.12.2"
anyhow = "1.0.94"
